# NoiseView

./: LICENSE.md  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rabross/noise/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
noise/: .gitignore  CMakeLists.txt  build.gradle
noise/src/main/: AndroidManifest.xml
noise/src/main/cpp/: native-lib.cpp  native-lib.h
noise/src/main/java/com/rabross/noise/: Noise.kt  NoiseEngine.kt  NoiseView.kt  RenderThread.kt  Renderer.kt  RunnableRenderThread.kt
noise/src/main/java/com/rabross/noise/generator/: CachingNoiseGenerator.kt  JavaRandom.kt  JavaRandomNoiseGenerator.kt  KotlinRandom.kt  KotlinRandomNoiseGenerator.kt  NoiseGenerator.kt
noise/src/main/java/com/rabross/noise/view/: NoiseView.kt
noise/src/main/res/values/: attrs.xml
